--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -55,7 +55,7 @@
 </p><p>Po stisknut&iacute; tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> se vybran&eacute; objekty zkop&iacute;ruj&iacute; do pam&#283;ti a pot&eacute; je lze vlo&#382;it do dokumentu, aby se duplikovaly pouze tyto objekty.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=ObjectSelection.png&amp;filetimestamp=20200204032022&amp;.html" class="mw-file-description"><img src="../File/ObjectSelection.png" decoding="async" width="623" height="415" class="mw-file-element" data-file-width="623" data-file-height="415"></a></span> 
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Dialogov&eacute; okno pro v&yacute;b&#283;r objekt&#367;, kter&eacute; se spou&scaron;t&iacute; z <a href="../index.php?title=Selection_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/cs (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a>.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Dialogov&eacute; okno pro v&yacute;b&#283;r objekt&#367;, kter&eacute; se spou&scaron;t&iacute; z <a href="../Selection_view.html" class="mw-redirect" title="Selection view">zobrazen&iacute; v&yacute;b&#283;ru</a>.</p>
 <p><span id="Tree_view"></span>
 </p>
 <h2><span id="Stromov.C3.A1_struktura"></span><span class="mw-headline" id="Stromov&aacute;_struktura">Stromov&aacute; struktura</span></h2>
@@ -115,15 +115,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122205034
+Cached time: 20260122205057
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.128 seconds
+CPU time usage: 0.067 seconds
+Real time usage: 0.158 seconds
 Preprocessor visited node count: 284/1000000
-Post&#8208;expand include size: 9861/2097152 bytes
-Template argument size: 2794/2097152 bytes
+Post&#8208;expand include size: 9855/2097152 bytes
+Template argument size: 2791/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.316      1 -total
- 33.11%   10.037      1 Template:Userdocnavi/cs
- 11.88%    3.600      1 Template:Navigation_menu_2
- 11.25%    3.409      3 Template:Code
- 10.09%    3.059      3 Template:Incode
-  8.82%    2.673      2 Template:Docnav
-  7.97%    2.415      1 Template:Caption
-  7.21%    2.187      1 Template:TOCright
-  6.80%    2.063      4 Template:KEY
-  5.86%    1.777      1 Template:Button
+100.00%   29.192      1 -total
+ 26.23%    7.656      1 Template:Userdocnavi/cs
+ 20.02%    5.844      1 Template:TOCright
+ 11.46%    3.346      3 Template:Code
+ 11.03%    3.221      2 Template:Docnav
+  9.53%    2.781      1 Template:Navigation_menu_2
+  6.36%    1.858      1 Template:MenuCommand
+  6.17%    1.802      4 Template:KEY
+  5.66%    1.653      3 Template:Incode
+  4.72%    1.377      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205034 and revision id 1742757. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205057 and revision id 1742759. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
