--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -59,7 +59,7 @@
 <p><span id="Tree_view"></span>
 </p>
 <h2><span id="Stromov.C3.A1_struktura"></span><span class="mw-headline" id="Stromov&aacute;_struktura">Stromov&aacute; struktura</span></h2>
-<p>Ve <a href="../index.php?title=Tree_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Tree view/cs (page does not exist)">stromov&eacute;m zobrazen&iacute;</a> lze polo&#382;ky vyb&iacute;rat nebo odzna&#269;ovat po jedn&eacute; tak, &#382;e podr&#382;&iacute;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a kliknete my&scaron;&iacute;.
+<p>Ve <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m zobrazen&iacute;</a> lze polo&#382;ky vyb&iacute;rat nebo odzna&#269;ovat po jedn&eacute; tak, &#382;e podr&#382;&iacute;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a kliknete my&scaron;&iacute;.
 </p><p>&#344;adu polo&#382;ek lze vybrat kliknut&iacute;m na prvn&iacute; polo&#382;ku, podr&#382;en&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a kliknut&iacute;m na posledn&iacute; polo&#382;ku.
 </p><p>V&yacute;b&#283;rem jedn&eacute; polo&#382;ky se tak&eacute; zobraz&iacute; jej&iacute; vlastnosti v <a href="../cs/Property_editor.html" class="mw-redirect" title="Property editor/cs">editoru vlastnost&iacute;</a>.
 </p><p>Dvojit&yacute;m kliknut&iacute;m otev&#345;ete jak&yacute;koli p&#345;idru&#382;en&yacute; <a href="../index.php?title=Task_panel/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Task panel/cs (page does not exist)">panel &uacute;kol&#367;</a> obsahuj&iacute;c&iacute; akce. Nezapome&#328;te tento panel &uacute;kol&#367; zav&#345;&iacute;t p&#345;ed proveden&iacute;m jin&eacute;ho p&#345;&iacute;kazu nebo p&#345;epnut&iacute;m na jinou pracovn&iacute; plochu.
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122205057
+Cached time: 20260122205125
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.158 seconds
+CPU time usage: 0.064 seconds
+Real time usage: 0.107 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9855/2097152 bytes
 Template argument size: 2791/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.192      1 -total
- 26.23%    7.656      1 Template:Userdocnavi/cs
- 20.02%    5.844      1 Template:TOCright
- 11.46%    3.346      3 Template:Code
- 11.03%    3.221      2 Template:Docnav
-  9.53%    2.781      1 Template:Navigation_menu_2
-  6.36%    1.858      1 Template:MenuCommand
-  6.17%    1.802      4 Template:KEY
-  5.66%    1.653      3 Template:Incode
-  4.72%    1.377      1 Template:Button
+100.00%   20.821      1 -total
+ 28.44%    5.921      1 Template:Userdocnavi/cs
+ 11.52%    2.399      3 Template:Incode
+ 10.52%    2.190      2 Template:Docnav
+ 10.11%    2.104      3 Template:Code
+  9.97%    2.077      1 Template:Caption
+  9.92%    2.065      1 Template:Navigation_menu_2
+  9.03%    1.880      1 Template:TOCright
+  6.07%    1.263      1 Template:Button
+  5.45%    1.135      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205057 and revision id 1742759. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205125 and revision id 1742761. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
