--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -63,7 +63,7 @@
 </p><p>&#344;adu polo&#382;ek lze vybrat kliknut&iacute;m na prvn&iacute; polo&#382;ku, podr&#382;en&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a kliknut&iacute;m na posledn&iacute; polo&#382;ku.
 </p><p>V&yacute;b&#283;rem jedn&eacute; polo&#382;ky se tak&eacute; zobraz&iacute; jej&iacute; vlastnosti v <a href="../cs/Property_editor.html" class="mw-redirect" title="Property editor/cs">editoru vlastnost&iacute;</a>.
 </p><p>Dvojit&yacute;m kliknut&iacute;m otev&#345;ete jak&yacute;koli p&#345;idru&#382;en&yacute; <a href="../Task_panel.html" class="mw-redirect" title="Task panel">panel &uacute;kol&#367;</a> obsahuj&iacute;c&iacute; akce. Nezapome&#328;te tento panel &uacute;kol&#367; zav&#345;&iacute;t p&#345;ed proveden&iacute;m jin&eacute;ho p&#345;&iacute;kazu nebo p&#345;epnut&iacute;m na jinou pracovn&iacute; plochu.
-</p><p>Dal&scaron;&iacute; metody jsou k dispozici po otev&#345;en&iacute; kontextov&eacute;ho menu (kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i), v z&aacute;vislosti na vybran&eacute;m objektu nebo aktivn&iacute;m pracovn&iacute;m prost&#345;ed&iacute;; viz informace v <a href="../index.php?title=Tree_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Tree view/cs (page does not exist)">stromov&eacute;m zobrazen&iacute;</a>.
+</p><p>Dal&scaron;&iacute; metody jsou k dispozici po otev&#345;en&iacute; kontextov&eacute;ho menu (kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i), v z&aacute;vislosti na vybran&eacute;m objektu nebo aktivn&iacute;m pracovn&iacute;m prost&#345;ed&iacute;; viz informace v <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m zobrazen&iacute;</a>.
 </p><p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122205138
+Cached time: 20260122205157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.179 seconds
+CPU time usage: 0.058 seconds
+Real time usage: 0.099 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9855/2097152 bytes
 Template argument size: 2791/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.079      1 -total
- 22.96%    5.988      1 Template:Userdocnavi/cs
- 10.31%    2.689      1 Template:MenuCommand
- 10.00%    2.607      2 Template:Docnav
-  9.56%    2.492      4 Template:KEY
-  9.55%    2.490      3 Template:Incode
-  9.46%    2.466      3 Template:Code
-  9.39%    2.449      1 Template:TOCright
-  8.92%    2.325      1 Template:Navigation_menu_2
-  7.50%    1.955      1 Template:Caption
+100.00%   28.156      1 -total
+ 46.24%   13.018      1 Template:Userdocnavi/cs
+ 36.14%   10.175      1 Template:Navigation_menu_2
+  8.70%    2.449      3 Template:Code
+  7.52%    2.118      2 Template:Docnav
+  7.36%    2.073      1 Template:Caption
+  6.00%    1.690      3 Template:Incode
+  5.52%    1.554      1 Template:MenuCommand
+  5.49%    1.546      4 Template:KEY
+  5.27%    1.484      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205138 and revision id 1742763. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205157 and revision id 1742765. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
