--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -68,7 +68,7 @@
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
 <p>V&yacute;b&#283;r objekt&#367; je ze sv&eacute; podstaty grafick&aacute; &uacute;loha, a proto je k dispozici pouze v p&#345;&iacute;pad&#283;, &#382;e je na&#269;teno grafick&eacute; u&#382;ivatelsk&eacute; rozhran&iacute;.
-</p><p>Tyto metody lze pou&#382;&iacute;t v <a href="../cs/Macros.html" title="Macros/cs">makrech</a> nebo z <a href="../index.php?title=Python_console/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python console/cs (page does not exist)">konzoly Pythonu</a>:
+</p><p>Tyto metody lze pou&#382;&iacute;t v <a href="../cs/Macros.html" title="Macros/cs">makrech</a> nebo z <a href="../Python_console.html" class="mw-redirect" title="Python console">konzoly Pythonu</a>:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="kn">import</span> <span class="nn">FreeCADGui</span> <span class="k">as</span> <span class="nn">Gui</span>
 
@@ -115,11 +115,11 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122205157
+Cached time: 20260122205214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.058 seconds
+CPU time usage: 0.061 seconds
 Real time usage: 0.099 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9855/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.156      1 -total
- 46.24%   13.018      1 Template:Userdocnavi/cs
- 36.14%   10.175      1 Template:Navigation_menu_2
-  8.70%    2.449      3 Template:Code
-  7.52%    2.118      2 Template:Docnav
-  7.36%    2.073      1 Template:Caption
-  6.00%    1.690      3 Template:Incode
-  5.52%    1.554      1 Template:MenuCommand
-  5.49%    1.546      4 Template:KEY
-  5.27%    1.484      1 Template:TOCright
+100.00%   16.058      1 -total
+ 29.75%    4.777      1 Template:Userdocnavi/cs
+ 12.58%    2.021      3 Template:Code
+ 12.27%    1.971      1 Template:Navigation_menu_2
+ 11.31%    1.816      2 Template:Docnav
+  8.30%    1.332      4 Template:KEY
+  7.19%    1.155      1 Template:Caption
+  7.09%    1.139      3 Template:Incode
+  6.19%    0.994      1 Template:TOCright
+  6.10%    0.980      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205157 and revision id 1742765. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205214 and revision id 1742767. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
