--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -90,7 +90,7 @@
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">Gui</span><span class="o">.</span><span class="n">Selection</span><span class="o">.</span><span class="n">removeSelectionGate</span><span class="p">()</span>
 </pre></div>
-<p>Dal&scaron;&iacute; informace o pou&#382;&iacute;v&aacute;n&iacute; t&#283;chto n&aacute;stroj&#367; najdete v <a href="../cs/Source_documentation.html" title="Source documentation/cs">zdrojov&eacute; dokumentaci</a> a <a href="../index.php?title=Std_PythonHelp/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std PythonHelp/cs (page does not exist)">Std PythonHelp</a>.
+<p>Dal&scaron;&iacute; informace o pou&#382;&iacute;v&aacute;n&iacute; t&#283;chto n&aacute;stroj&#367; najdete v <a href="../cs/Source_documentation.html" title="Source documentation/cs">zdrojov&eacute; dokumentaci</a> a <a href="../Std_PythonHelp.html" title="Std PythonHelp">Std PythonHelp</a>.
 </p><p><br>
 </p>
 <div class="docnav">
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122205214
+Cached time: 20260122205240
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.099 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.124 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9855/2097152 bytes
 Template argument size: 2791/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.058      1 -total
- 29.75%    4.777      1 Template:Userdocnavi/cs
- 12.58%    2.021      3 Template:Code
- 12.27%    1.971      1 Template:Navigation_menu_2
- 11.31%    1.816      2 Template:Docnav
-  8.30%    1.332      4 Template:KEY
-  7.19%    1.155      1 Template:Caption
-  7.09%    1.139      3 Template:Incode
-  6.19%    0.994      1 Template:TOCright
-  6.10%    0.980      1 Template:Button
+100.00%   18.361      1 -total
+ 28.33%    5.201      1 Template:Userdocnavi/cs
+ 15.05%    2.763      1 Template:Navigation_menu_2
+ 14.18%    2.603      2 Template:Docnav
+ 12.25%    2.249      3 Template:Code
+  7.54%    1.385      1 Template:Button
+  7.02%    1.289      1 Template:Caption
+  6.80%    1.248      4 Template:KEY
+  6.73%    1.235      1 Template:TOCright
+  6.34%    1.164      3 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205214 and revision id 1742767. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205240 and revision id 1742769. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
