Updated page Mouse navigation/cs

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -32,7 +32,7 @@
 <h2><span id="P.C5.99ehled"></span><span class="mw-headline" id="P&#345;ehled">P&#345;ehled</span></h2>
 <p><b>Navigace my&scaron;&iacute;</b> ve FreeCADu se skl&aacute;d&aacute; z p&#345;&iacute;kaz&#367; pou&#382;&iacute;van&yacute;ch k vizu&aacute;ln&iacute; navigaci ve 3D prostoru a interakci se zobrazen&yacute;mi objekty. FreeCAD podporuje v&iacute;ce styl&#367; navigace my&scaron;&iacute;. V&yacute;choz&iacute; styl navigace se naz&yacute;v&aacute; <a href="#CAD_navigation/cs">Navigace CAD</a> a je velmi jednoduch&yacute; a praktick&yacute;, ale FreeCAD tak&eacute; nab&iacute;z&iacute; n&#283;kolik alternativn&iacute;ch styl&#367; navigace, ze kter&yacute;ch si m&#367;&#382;ete vybrat. Vybran&yacute; styl se pou&#382;ije pro v&scaron;echny pracovn&iacute; plochy.
 </p><p>Dal&scaron;&iacute; informace o v&yacute;b&#283;ru objekt&#367; viz <a href="../cs/Selection_methods.html" title="Selection methods/cs">Metody v&yacute;b&#283;ru</a>.
-</p><p>Dal&scaron;&iacute; informace o manipulaci s objekty viz <a href="../index.php?title=Std_TransformManip/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std TransformManip/cs (page does not exist)">Std TransformManip</a>.
+</p><p>Dal&scaron;&iacute; informace o manipulaci s objekty viz <a href="../Std_TransformManip.html" title="Std TransformManip">Std TransformManip</a>.
 </p><p><span id="Selecting_a_navigation_style"></span>
 </p>
 <h2><span id="V.C3.BDb.C4.9Br_stylu_navigace"></span><span class="mw-headline" id="V&yacute;b&#283;r_stylu_navigace">V&yacute;b&#283;r stylu navigace</span></h2>
@@ -748,18 +748,18 @@
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
-<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
+<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../cs/External_workbenches.html" title="External workbenches/cs">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs:</b> <a href="../cs/User_hub.html" title="User hub/cs">User hub</a>, <a href="../cs/Power_users_hub.html" title="Power users hub/cs">Power users hub</a>, <a href="../cs/Developer_hub.html" title="Developer hub/cs">Developer hub</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118075847
+Cached time: 20260122205425
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.266 seconds
-Real time usage: 0.331 seconds
+CPU time usage: 0.301 seconds
+Real time usage: 0.656 seconds
 Preprocessor visited node count: 1365/1000000
 Post&#8208;expand include size: 64316/2097152 bytes
 Template argument size: 27005/2097152 bytes
@@ -770,19 +770,19 @@ Unstrip post&#8208;expand size: 3881/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.919      1 -total
- 14.88%    8.320      8 Template:ASCII
- 14.35%    8.023      1 Template:Userdocnavi/cs
-  7.84%    4.384      1 Template:Navigation_menu_2
-  6.83%    3.820     55 Template:KEY
-  5.03%    2.814      2 Template:Docnav
-  4.76%    2.663      1 Template:OpenSCAD_Navigation
-  4.69%    2.623      2 Template:Button
-  4.69%    2.621      1 Template:CAD_Navigation
-  4.36%    2.440      9 Template:MenuCommand
+100.00%  117.024      1 -total
+  9.28%   10.859      8 Template:ASCII
+  9.22%   10.791      1 Template:Userdocnavi/cs
+  9.18%   10.741     55 Template:KEY
+  7.25%    8.486      1 Template:OpenSCAD_Navigation
+  6.85%    8.019      1 Template:OpenInventor_Navigation
+  5.98%    7.003      1 Template:SolidWorks_Navigation
+  5.76%    6.737      1 Template:Revit_Navigation
+  5.32%    6.227      1 Template:Blender_Navigation
+  4.98%    5.830      1 Template:OpenCascade_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260118075847 and revision id 1739864. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260122205425 and revision id 1742771. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
