Updated page Mouse navigation/cs

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -37,11 +37,11 @@
 </p>
 <h2><span id="V.C3.BDb.C4.9Br_stylu_navigace"></span><span class="mw-headline" id="V&yacute;b&#283;r_stylu_navigace">V&yacute;b&#283;r stylu navigace</span></h2>
 <ol><li>Prove&#271;te jednu z n&aacute;sleduj&iacute;c&iacute;ch akc&iacute;:
-<ul><li>Stiskn&#283;te tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> ve <a href="../index.php?title=Status_bar/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Status bar/cs (page does not exist)">Stavov&eacute;m &#345;&aacute;dku</a>.</li>
-<li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pr&aacute;zdnou oblast ve <a href="../index.php?title=3D_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D view/cs (page does not exist)">3D zobrazen&iacute;</a> a z kontextov&eacute;ho menu vyberte <b>Styly navigace</b>.</li>
+<ul><li>Stiskn&#283;te tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> ve <a href="../Status_bar.html" class="mw-redirect" title="Status bar">Stavov&eacute;m &#345;&aacute;dku</a>.</li>
+<li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pr&aacute;zdnou oblast ve <a href="../3D_view.html" class="mw-redirect" title="3D view">3D zobrazen&iacute;</a> a z kontextov&eacute;ho menu vyberte <b>Styly navigace</b>.</li>
 <li>Pou&#382;ijte <a href="../Preferences_Editor.html#Navigation/cs" title="Preferences Editor">Editor p&#345;edvoleb</a>. V menu vyberte <b>&Uacute;pravy &rarr; Preference</b> a pot&eacute; <b>Zobrazen&iacute; &rarr; Navigace &rarr; 3D Navigace</b>.</li></ul></li>
 <li>Vyberte styl ze seznamu.</li>
-<li>Voliteln&#283; m&#367;&#382;ete zm&#283;nit <b>Styl orbitu</b>: stiskn&#283;te tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> ve <a href="../index.php?title=Status_bar/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Status bar/cs (page does not exist)">Stavov&eacute;m &#345;&aacute;dku</a> a pot&eacute; vyberte <b>Nastaven&iacute; &rarr; Styl orbitu</b>. Viz <a href="../Preferences_Editor.html#Navigation/cs" title="Preferences Editor">Editor p&#345;edvoleb</a>.</li>
+<li>Voliteln&#283; m&#367;&#382;ete zm&#283;nit <b>Styl orbitu</b>: stiskn&#283;te tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> ve <a href="../Status_bar.html" class="mw-redirect" title="Status bar">Stavov&eacute;m &#345;&aacute;dku</a> a pot&eacute; vyberte <b>Nastaven&iacute; &rarr; Styl orbitu</b>. Viz <a href="../Preferences_Editor.html#Navigation/cs" title="Preferences Editor">Editor p&#345;edvoleb</a>.</li>
 <li>Voliteln&#283; zm&#283;&#328;te <b>Re&#382;im ot&aacute;&#269;en&iacute;</b>. Viz <a href="../Preferences_Editor.html#Navigation/cs" title="Preferences Editor">Editor p&#345;edvoleb</a>.</li>
 <li>Pokud je vybr&aacute;n styl navigace <b>CAD</b>: voliteln&#283; zm&#283;&#328;te nastaven&iacute; <b>Povolit animaci</b>. Viz <a href="../Preferences_Editor.html#Navigation/cs" title="Preferences Editor">Editor p&#345;edvoleb</a>.</li></ol>
 <p><span id="Available_navigation_styles"></span>
@@ -754,12 +754,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122205425
+Cached time: 20260122205515
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.301 seconds
-Real time usage: 0.656 seconds
+CPU time usage: 0.309 seconds
+Real time usage: 1.042 seconds
 Preprocessor visited node count: 1365/1000000
 Post&#8208;expand include size: 64316/2097152 bytes
 Template argument size: 27005/2097152 bytes
@@ -770,19 +770,19 @@ Unstrip post&#8208;expand size: 3881/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  117.024      1 -total
-  9.28%   10.859      8 Template:ASCII
-  9.22%   10.791      1 Template:Userdocnavi/cs
-  9.18%   10.741     55 Template:KEY
-  7.25%    8.486      1 Template:OpenSCAD_Navigation
-  6.85%    8.019      1 Template:OpenInventor_Navigation
-  5.98%    7.003      1 Template:SolidWorks_Navigation
-  5.76%    6.737      1 Template:Revit_Navigation
-  5.32%    6.227      1 Template:Blender_Navigation
-  4.98%    5.830      1 Template:OpenCascade_Navigation
+100.00%  158.664      1 -total
+ 19.68%   31.223     55 Template:KEY
+ 14.05%   22.297      8 Template:ASCII
+ 13.89%   22.043      1 Template:OpenCascade_Navigation
+  8.44%   13.398      1 Template:Blender_Navigation
+  6.94%   11.013      1 Template:Userdocnavi/cs
+  5.57%    8.845      1 Template:OpenSCAD_Navigation
+  4.34%    6.879      1 Template:Gesture_Navigation
+  3.61%    5.733      1 Template:OpenInventor_Navigation
+  3.35%    5.317      1 Template:TinkerCAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260122205425 and revision id 1742771. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260122205514 and revision id 1742773. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
