--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -106,7 +106,7 @@
 <h2><span id="Pr.C3.A1ce_s_pracovn.C3.ADmi_plochami_Draft_a_BIM"></span><span class="mw-headline" id="Pr&aacute;ce_s_pracovn&iacute;mi_plochami_Draft_a_BIM">Pr&aacute;ce s pracovn&iacute;mi plochami Draft a BIM</span></h2>
 <p><a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft </a> a <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plocha BIM</a> se chovaj&iacute; trochu jinak ne&#382; ostatn&iacute; v&yacute;&scaron;e uveden&eacute; pracovn&iacute; plochy, i kdy&#382; se &#345;&iacute;d&iacute; stejn&yacute;mi pravidly, kter&aacute; jsou spole&#269;n&aacute; pro cel&yacute; FreeCAD. Stru&#269;n&#283; &#345;e&#269;eno, zat&iacute;mco Sketcher a PartDesign jsou ur&#269;eny p&#345;edev&scaron;&iacute;m k navrhov&aacute;n&iacute; jednotliv&yacute;ch d&iacute;l&#367;, Draft a BIM jsou ur&#269;eny k usnadn&#283;n&iacute; pr&aacute;ce s n&#283;kolika jednodu&scaron;&scaron;&iacute;mi objekty.
 </p><p><a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">pracovn&iacute; plocha Draft</a> nab&iacute;z&iacute; 2D n&aacute;stroje trochu jednodu&scaron;&scaron;&iacute;, ne&#382; jak&eacute; najdete v tradi&#269;n&iacute;ch 2D CAD aplikac&iacute;ch jako je <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/AutoCAD">AutoCAD</a>. Nicm&eacute;n&#283;, kreslen&iacute; ve 2D je mimo hlavn&iacute; sm&#283;r sf&eacute;ry FreeCADu, neo&#269;ek&aacute;vejte, &#382;e zde najdete pln&yacute; rozsah n&aacute;stroj&#367;, kter&eacute; nab&iacute;zej&iacute; tyto jedno&uacute;&#269;elov&eacute; aplikace. V&#283;t&scaron;ina n&aacute;stroj&#367; Kreslen&iacute; nepracuje pouze ve 2D, ale tak&eacute; v pln&eacute;m 3D prostoru a vyu&#382;&iacute;vaj&iacute; v&yacute;hod pomocn&yacute;ch syst&eacute;m&#367; jako jsou <a href="../cs/Draft_SelectPlane.html" title="Draft SelectPlane/cs">pracovn&iacute; roviny</a> a <a href="../cs/Draft_Snap.html" title="Draft Snap/cs">zachycov&aacute;n&iacute;/uchopov&aacute;n&iacute; objekt&#367;</a>.
-</p><p><a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">Pracovn&iacute; plocha BIM</a> p&#345;id&aacute;v&aacute; do FreeCADu n&aacute;stroj <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Building_Information_Modeling">BIM</a>, kter&yacute; umo&#382;&#328;uje vytv&aacute;&#345;et stavebn&iacute; modely s parametrick&yacute;mi objekty. Pracovn&iacute; plocha BIM se op&iacute;r&aacute; o dal&scaron;&iacute; modely jako je Draft a Sketcher. V&scaron;echny n&aacute;stroje Draft jsou p&#345;&iacute;tomny i v pracovn&iacute; plo&scaron;e BIM a v&#283;t&scaron;ina n&aacute;stroj&#367; z BIM pou&#382;&iacute;v&aacute; pomocn&yacute; kreslic&iacute; syst&eacute;m z Draftu.
+</p><p><a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> p&#345;id&aacute;v&aacute; do FreeCADu n&aacute;stroj <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Building_Information_Modeling">BIM</a>, kter&yacute; umo&#382;&#328;uje vytv&aacute;&#345;et stavebn&iacute; modely s parametrick&yacute;mi objekty. Pracovn&iacute; plocha BIM se op&iacute;r&aacute; o dal&scaron;&iacute; modely jako je Draft a Sketcher. V&scaron;echny n&aacute;stroje Draft jsou p&#345;&iacute;tomny i v pracovn&iacute; plo&scaron;e BIM a v&#283;t&scaron;ina n&aacute;stroj&#367; z BIM pou&#382;&iacute;v&aacute; pomocn&yacute; kreslic&iacute; syst&eacute;m z Draftu.
 </p><p>Typick&yacute; pracovn&iacute; postup s pracovn&iacute;mi plochami BIM a Draft m&#367;&#382;e vypadat takto:
 </p>
 <ol><li>Nakreslete n&#283;kolik lini&iacute; pomoc&iacute; n&aacute;stroje Draft Line.</li>
@@ -154,18 +154,18 @@
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
-<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
+<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../cs/External_workbenches.html" title="External workbenches/cs">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs:</b> <a href="../cs/User_hub.html" title="User hub/cs">User hub</a>, <a href="../cs/Power_users_hub.html" title="Power users hub/cs">Power users hub</a>, <a href="../cs/Developer_hub.html" title="Developer hub/cs">Developer hub</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118075633
+Cached time: 20260122205850
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.370 seconds
 Preprocessor visited node count: 278/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
@@ -176,19 +176,19 @@ Unstrip post&#8208;expand size: 4570/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.393      1 -total
- 29.32%    3.634      1 Template:Userdocnavi
- 17.49%    2.167      1 Template:Navigation_menu_2
- 14.55%    1.803      2 Template:Docnav
-  9.88%    1.224      1 Template:Incode
-  9.39%    1.164      1 Template:Caption
-  8.80%    1.091      2 Template:KEY
-  8.54%    1.058      1 Template:Button
-  7.55%    0.936      1 Template:TOCright
-  7.05%    0.874      1 Template:Emphasis
+100.00%   48.936      1 -total
+ 18.59%    9.096      1 Template:Button
+ 18.39%    8.997      1 Template:Userdocnavi
+ 11.81%    5.778      2 Template:Docnav
+ 11.36%    5.558      2 Template:KEY
+  9.02%    4.414      1 Template:Incode
+  8.85%    4.332      1 Template:Navigation_menu_2
+  8.63%    4.221      1 Template:Caption
+  8.44%    4.128      1 Template:Emphasis
+  5.62%    2.748      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118075633 and revision id 1739862. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260122205849 and revision id 1742775. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
