--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -131,7 +131,7 @@
 <p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
-<p>A kone&#269;n&#283;, jednou z nejv&yacute;konn&#283;j&scaron;&iacute;ch funkc&iacute; FreeCADu je prost&#345;ed&iacute; <a href="../Power_users_hub.html#Scripting_in_FreeCAD" title="Power users hub">skriptov&aacute;n&iacute;</a>. Z integrovan&eacute; konzoly Pythonu (nebo z jak&eacute;hokoli jin&eacute;ho extern&iacute;ho skriptu Pythonu) m&#367;&#382;ete z&iacute;skat p&#345;&iacute;stup k t&eacute;m&#283;&#345; jak&eacute;koli &#269;&aacute;sti FreeCADu, vytv&aacute;&#345;et nebo upravovat geometrii, upravovat zobrazen&iacute; t&#283;chto objekt&#367; ve 3D sc&eacute;n&#283; nebo p&#345;istupovat k rozhran&iacute; FreeCADu a upravovat ho. Skriptov&aacute;n&iacute; Pythonu lze tak&eacute; pou&#382;&iacute;t v <a href="../index.php?title=Makrech&amp;action=edit&amp;redlink=1.html" class="new" title="Makrech (page does not exist)">makrech</a>, kter&aacute; poskytuj&iacute; snadn&yacute; zp&#367;sob vytv&aacute;&#345;en&iacute; vlastn&iacute;ch p&#345;&iacute;kaz&#367;.
+<p>A kone&#269;n&#283;, jednou z nejv&yacute;konn&#283;j&scaron;&iacute;ch funkc&iacute; FreeCADu je prost&#345;ed&iacute; <a href="../Power_users_hub.html#Scripting_in_FreeCAD" title="Power users hub">skriptov&aacute;n&iacute;</a>. Z integrovan&eacute; konzoly Pythonu (nebo z jak&eacute;hokoli jin&eacute;ho extern&iacute;ho skriptu Pythonu) m&#367;&#382;ete z&iacute;skat p&#345;&iacute;stup k t&eacute;m&#283;&#345; jak&eacute;koli &#269;&aacute;sti FreeCADu, vytv&aacute;&#345;et nebo upravovat geometrii, upravovat zobrazen&iacute; t&#283;chto objekt&#367; ve 3D sc&eacute;n&#283; nebo p&#345;istupovat k rozhran&iacute; FreeCADu a upravovat ho. Skriptov&aacute;n&iacute; Pythonu lze tak&eacute; pou&#382;&iacute;t v <a href="../Macros.html" title="Macros">makrech</a>, kter&aacute; poskytuj&iacute; snadn&yacute; zp&#367;sob vytv&aacute;&#345;en&iacute; vlastn&iacute;ch p&#345;&iacute;kaz&#367;.
 </p><p><span id="What's_new"></span>
 </p>
 <h2><span id="Co_je_nov.C3.A9ho"></span><span class="mw-headline" id="Co_je_nov&eacute;ho">Co je nov&eacute;ho</span></h2>
@@ -160,12 +160,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122205850
+Cached time: 20260122205920
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.370 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.186 seconds
 Preprocessor visited node count: 278/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
@@ -176,19 +176,19 @@ Unstrip post&#8208;expand size: 4570/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.936      1 -total
- 18.59%    9.096      1 Template:Button
- 18.39%    8.997      1 Template:Userdocnavi
- 11.81%    5.778      2 Template:Docnav
- 11.36%    5.558      2 Template:KEY
-  9.02%    4.414      1 Template:Incode
-  8.85%    4.332      1 Template:Navigation_menu_2
-  8.63%    4.221      1 Template:Caption
-  8.44%    4.128      1 Template:Emphasis
-  5.62%    2.748      1 Template:TOCright
+100.00%   18.865      1 -total
+ 20.12%    3.796      2 Template:Docnav
+ 18.03%    3.402      1 Template:Userdocnavi
+ 13.29%    2.507      1 Template:TOCright
+ 11.84%    2.233      1 Template:Navigation_menu_2
+ 11.36%    2.143      1 Template:Emphasis
+  9.29%    1.753      1 Template:Button
+  7.89%    1.489      1 Template:Incode
+  7.57%    1.428      2 Template:KEY
+  6.59%    1.244      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260122205849 and revision id 1742775. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260122205920 and revision id 1742777. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
