--- a/wiki/cs/Installing_additional_components.html
+++ b/wiki/cs/Installing_additional_components.html
@@ -53,7 +53,7 @@
 <p><a rel="nofollow" class="external text" href="https://www.anderswallin.net/CAM">OpenCAMLib</a> is an open source library of computer aided manufacturing (CAM) algorithms. It is used in the <a href="../CAM_Workbench.html" title="CAM Workbench">CAM Workbench</a>. See the <a href="../OpenCamLib.html" title="OpenCamLib">OpenCamLib</a> page for installation instructions.
 </p>
 <h3><span class="mw-headline" id="OpenSCAD">OpenSCAD</span></h3>
-<p><a rel="nofollow" class="external text" href="https://www.openscad.org">OpenSCAD</a> je robustn&iacute; 3D model&aacute;&#345;. <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">Pracovn&iacute; prost&#345;ed&iacute; OpenSCAD</a> je na tomto softwaru z&aacute;visl&eacute; a <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Pracovn&iacute; prost&#345;ed&iacute; Mesh</a> ho pou&#382;&iacute;v&aacute; pro sv&eacute; booleovsk&eacute; n&aacute;stroje. Je tak&eacute; nezbytn&yacute; pro import soubor&#367; SCAD pomoc&iacute; n&aacute;stroje <a href="../index.php?title=Std_Import/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Import/cs (page does not exist)">Std Import</a>.
+<p><a rel="nofollow" class="external text" href="https://www.openscad.org">OpenSCAD</a> je robustn&iacute; 3D model&aacute;&#345;. <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">Pracovn&iacute; prost&#345;ed&iacute; OpenSCAD</a> je na tomto softwaru z&aacute;visl&eacute; a <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Pracovn&iacute; prost&#345;ed&iacute; Mesh</a> ho pou&#382;&iacute;v&aacute; pro sv&eacute; booleovsk&eacute; n&aacute;stroje. Je tak&eacute; nezbytn&yacute; pro import soubor&#367; SCAD pomoc&iacute; n&aacute;stroje <a href="../Std_Import.html" title="Std Import">Std Import</a>.
 </p><p><span id="File_formats"></span>
 </p>
 <h2><span id="Form.C3.A1ty_soubor.C5.AF"></span><span class="mw-headline" id="Form&aacute;ty_soubor&#367;">Form&aacute;ty soubor&#367;</span></h2>
@@ -144,12 +144,12 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122210142
+Cached time: 20260122210200
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.165 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 6617/2097152 bytes
 Template argument size: 2097/2097152 bytes
@@ -160,16 +160,16 @@ Unstrip post&#8208;expand size: 3821/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.253      1 -total
- 38.23%    8.890      1 Template:Userdocnavi/cs
- 26.42%    6.143      1 Template:TOCright
- 17.42%    4.050      1 Template:Navigation_menu_2
- 13.31%    3.096      1 Template:Version
- 10.28%    2.390      1 Template:Docnav
-  8.70%    2.023      1 Template:VersionMinus
+100.00%   11.417      1 -total
+ 45.91%    5.242      1 Template:Userdocnavi/cs
+ 18.25%    2.084      1 Template:Navigation_menu_2
+ 16.96%    1.936      1 Template:Docnav
+ 12.88%    1.471      1 Template:VersionMinus
+ 11.63%    1.328      1 Template:Version
+  8.11%    0.926      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260122210142 and revision id 1742779. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260122210159 and revision id 1742781. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
