--- a/wiki/cs/Installing_additional_components.html
+++ b/wiki/cs/Installing_additional_components.html
@@ -118,8 +118,8 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
 </p>
 <h1><span id="Souvisej.C3.ADc.C3.AD_str.C3.A1nky"></span><span class="mw-headline" id="Souvisej&iacute;c&iacute;_str&aacute;nky">Souvisej&iacute;c&iacute; str&aacute;nky</span></h1>
 <ul><li><a href="../cs/Import_Export.html" title="Import Export/cs">Import Export</a></li>
-<li><a href="../index.php?title=Import_Export_Preferences/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Import Export Preferences/cs (page does not exist)">P&#345;edvolby pro Import a Export</a></li>
-<li><a href="../index.php?title=Third_Party_Libraries/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Third Party Libraries/cs (page does not exist)">Knihovny t&#345;et&iacute;ch stran</a></li></ul>
+<li><a href="../Import_Export_Preferences.html" title="Import Export Preferences">P&#345;edvolby pro Import a Export</a></li>
+<li><a href="../Third_Party_Libraries.html" title="Third Party Libraries">Knihovny t&#345;et&iacute;ch stran</a></li></ul>
 <p><br>
 </p>
 <div class="mw-translate-fuzzy">
@@ -144,12 +144,12 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122210200
+Cached time: 20260122210232
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.062 seconds
-Real time usage: 0.126 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 6617/2097152 bytes
 Template argument size: 2097/2097152 bytes
@@ -160,16 +160,16 @@ Unstrip post&#8208;expand size: 3821/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.417      1 -total
- 45.91%    5.242      1 Template:Userdocnavi/cs
- 18.25%    2.084      1 Template:Navigation_menu_2
- 16.96%    1.936      1 Template:Docnav
- 12.88%    1.471      1 Template:VersionMinus
- 11.63%    1.328      1 Template:Version
-  8.11%    0.926      1 Template:TOCright
+100.00%   13.199      1 -total
+ 45.69%    6.031      1 Template:Userdocnavi/cs
+ 17.72%    2.339      1 Template:Navigation_menu_2
+ 14.39%    1.899      1 Template:Docnav
+ 13.93%    1.838      1 Template:TOCright
+ 11.88%    1.568      1 Template:Version
+ 10.86%    1.433      1 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260122210159 and revision id 1742781. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260122210232 and revision id 1742783. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
