Created page with "==Descrizione=="

--- a/wiki/it/Macro_Download_Classifications.html
+++ b/wiki/it/Macro_Download_Classifications.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Klassifikationen herunterladen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Download_Classifications.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Download Classifications (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Download Classifications (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja Download Classifications (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -74,16 +74,16 @@ Download Classifications
 </td></tr>
 </tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This macro downloads a series of BIM classification systems from <a rel="nofollow" class="external free" href="https://github.com/Moult/IfcClassification">https://github.com/Moult/IfcClassification</a> and places them in the appropriate folder on your computer so they are found by the <a href="../BIM_Classification.html" title="BIM Classification">BIM Classification</a> tool.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Run the macro. After it has run successfully, the new classification systems will be available in the <a href="../BIM_Classification.html" title="BIM Classification">BIM Classification</a> tool. After the macro has run and the classification systems are installed, you can safely delete the macro.
 </p>
@@ -121,12 +121,12 @@ else:
     print("error getting repo contents")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123105346
+Cached time: 20260123105358
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.065 seconds
+CPU time usage: 0.033 seconds
+Real time usage: 0.050 seconds
 Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2157/2097152 bytes
 Template argument size: 769/2097152 bytes
@@ -137,12 +137,12 @@ Unstrip post&#8208;expand size: 1877/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.980      1 -total
- 65.28%    6.515      1 Template:Macro
- 33.61%    3.354      1 Template:MacroCode
+100.00%    7.431      1 -total
+ 62.16%    4.619      1 Template:Macro
+ 36.05%    2.679      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105346 and revision id 1742849. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105358 and revision id 1742853. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
