Created page with "Tramite il [[Std_AddonMgr|Gestore componenti aggiuntivi]]."

--- a/wiki/it/Macro_Download_Classifications.html
+++ b/wiki/it/Macro_Download_Classifications.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Klassifikationen herunterladen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Download_Classifications.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Download Classifications (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Download Classifications (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja Download Classifications (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -88,13 +88,10 @@ Download Classifications
 </p><p><span id="Install"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Through the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon manager</a>.
+<p>Tramite il <a href="../Std_AddonMgr.html" title="Std AddonMgr">Gestore componenti aggiuntivi</a>.
+</p><p><span id="Code"></span>
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Code">Code</span></h2>
-</div>
+<h2><span class="mw-headline" id="Codice">Codice</span></h2>
 <p><b>Macro_Download_Classifications.FCMacro</b>
 </p>
 <pre>import os
@@ -118,28 +115,28 @@ else:
     print("error getting repo contents")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123105507
+Cached time: 20260123105533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.042 seconds
-Preprocessor visited node count: 98/1000000
+CPU time usage: 0.024 seconds
+Real time usage: 0.034 seconds
+Preprocessor visited node count: 97/1000000
 Post&#8208;expand include size: 2157/2097152 bytes
 Template argument size: 769/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1877/5000000 bytes
+Unstrip post&#8208;expand size: 1878/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.664      1 -total
- 65.94%    3.735      1 Template:Macro
- 31.25%    1.770      1 Template:MacroCode
+100.00%    5.404      1 -total
+ 61.09%    3.301      1 Template:Macro
+ 37.16%    2.008      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105507 and revision id 1742857. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105533 and revision id 1742861. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
