Created page with "{{Macro/it |Name=Download Classifications |Description=Scarica un pacchetto di sistemi di classificazione BIM da utilizzare in FreeCAD |Author=yorik |Version=1.0 |Date=2024-12-13 |FCVersion=All }}"

--- a/wiki/it/Macro_Download_Classifications.html
+++ b/wiki/it/Macro_Download_Classifications.html
@@ -2,24 +2,23 @@
 <li><a href="../de/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Klassifikationen herunterladen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Download_Classifications.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Download Classifications (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Download Classifications (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Download_Classifications.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja Download Classifications (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description" title="Generic macro icon. Create your personal icon with the same name of the macro"><img alt="Generic macro icon. Create your personal icon with the same name of the macro" src="../File/Text-x-python.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description" title="Icona macro generica. Crea la tua icona personale con lo stesso nome della macro"><img alt="Icona macro generica. Crea la tua icona personale con lo stesso nome della macro" src="../File/Text-x-python.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span> </span>
 Download Classifications
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Description
+<th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Downloads a package of BIM classification systems for use in FreeCAD<br><br>Macro version: 1.0<br>Last modified: 2024-12-13<br>FreeCAD version: All<br>Author: yorik<br>
+<td class="ctEven left macro-description">Scarica un pacchetto di sistemi di classificazione BIM da utilizzare in FreeCAD<br><br>Versione macro: 1.0<br>Ultima modifica: 2024-12-13<br>Versione FreeCAD: All<br>Autore: yorik<br>
 </td></tr>
 <tr>
-<th class="ctOdd">Author
+<th class="ctOdd">Autore
 </th></tr>
 <tr>
 <td class="ctEven macro-author"><a href="../User;Yorik.html" title="User:Yorik">yorik</a>
@@ -31,40 +30,40 @@ Download Classifications
 <td class="ctEven macro-download"><i>None</i>
 </td></tr>
 <tr>
-<th class="ctOdd">Links
+<th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="../Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Macro Version
+<th class="ctOdd">Versione macro
 </th></tr>
 <tr>
 <td class="ctEven macro-version">1.0
 </td></tr>
 <tr>
-<th class="ctOdd">Date last modified
+<th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
 <td class="ctEven macro-date">2024-12-13
 </td></tr>
 <tr>
-<th class="ctOdd">FreeCAD Version(s)
+<th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
 <td class="ctEven FreeCAD-version">All
 </td></tr>
 <tr>
-<th class="ctOdd">Default shortcut
+<th class="ctOdd">Scorciatoia
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuna</i>
 </td></tr>
 <tr>
-<th class="ctOdd">See also
+<th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -73,7 +72,6 @@ Download Classifications
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -112,28 +110,28 @@ else:
     print("error getting repo contents")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123105537
+Cached time: 20260123105608
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.039 seconds
-Preprocessor visited node count: 96/1000000
-Post&#8208;expand include size: 2157/2097152 bytes
-Template argument size: 769/2097152 bytes
+CPU time usage: 0.032 seconds
+Real time usage: 0.044 seconds
+Preprocessor visited node count: 93/1000000
+Post&#8208;expand include size: 2209/2097152 bytes
+Template argument size: 780/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1878/5000000 bytes
+Unstrip post&#8208;expand size: 1882/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.674      1 -total
- 63.14%    2.951      1 Template:Macro
- 34.72%    1.623      1 Template:MacroCode
+100.00%    4.402      1 -total
+ 67.09%    2.953      1 Template:Macro/it
+ 30.46%    1.341      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105537 and revision id 1742863. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105608 and revision id 1742865. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
