Created page with "Copyright 2024 Pablo Gil Fernández Quest'opera è rilasciata con licenza GNU Lesser General Public License (LGPL). Per visualizzare una copia di questa licenza, visitare:<br> https://www.gnu.org/licenses/lgpl-3.0.html"

--- a/wiki/it/Macro_Batch_Export_To_Mesh.html
+++ b/wiki/it/Macro_Batch_Export_To_Mesh.html
@@ -1166,21 +1166,19 @@ BatchETM.destroyed.connect(lambda: FreeCADGui.getMainWindow().findChild(QtWidget
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Licence">Licence</span></h2>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Copyright 2024 Pablo Gil Fern&aacute;ndez
-This work is licensed under GNU Lesser General Public License (LGPL). To view a copy of this license, visit:<br>
+Quest'opera &egrave; rilasciata con licenza GNU Lesser General Public License (LGPL). Per visualizzare una copia di questa licenza, visitare:<br>
 <a rel="nofollow" class="external free" href="https://www.gnu.org/licenses/lgpl-3.0.html">https://www.gnu.org/licenses/lgpl-3.0.html</a>
 </p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260123135643
+Cached time: 20260123135725
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.042 seconds
-Preprocessor visited node count: 100/1000000
+CPU time usage: 0.033 seconds
+Real time usage: 0.092 seconds
+Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2172/2097152 bytes
 Template argument size: 289/2097152 bytes
 Highest expansion depth: 7/100
@@ -1190,12 +1188,12 @@ Unstrip post&#8208;expand size: 50450/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.779      1 -total
- 67.25%    4.559      1 Template:Macro
- 30.82%    2.089      1 Template:MacroCode
+100.00%   13.776      1 -total
+ 53.77%    7.407      1 Template:Macro
+ 43.32%    5.967      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135643 and revision id 1742892. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135725 and revision id 1742894. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
